Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23422

TextInput with clipping set doesn't show internal content

XMLWordPrintable

      When you set "clip: true" to a TextInput, you won't be able to see the inner content inside (maybe only a tiny width on the left corner). The attachment shows a small example of this bug. Clipping issues may affect other elements as well, but I didn't test so I'm not sure.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            rafael.lobo Rafael Brandao Lobo
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes